# app-eai-agent-surkai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yaml  justfile  pyproject.toml  test_crawl4ai.py
.github/workflows/: build-container.yaml  clear-cache.yaml
docs/: README.md
docs/swagger/: swagger.json
k8s/prod/: resources.yaml
k8s/staging/: resources.yaml
scripts/: generate_swagger_docs.py  test_swagger_generation.sh
searxng/: settings.yml  settings.yml.example
src/: main.py
src/api/v1/: web_search.py
src/config/: env.py
src/helpers/: chunk_breaker.py  text_selector.py  vectorstore.py
src/models/: web_search_model.py
src/services/: crawl_client.py  llm_client.py  search_service.py  searx_client.py
